vlib/v/checker/tests/generics_method_called_variadic_arg_mismatch.vv
struct Client {}

fn (cl Client) req[T](data ...string) {}

struct Product {}

fn (c Client) products_list(options ...string) {
	c.req[Product](options) // (...options) works
}

fn (c Client) pay[T](money ...T) {
}

fn (c Client) pay_value(money ...Value) {
	println(money)
}

interface Value {
}

fn concat[T](a []T, b ...T) []T {
	mut arr := []T{}
	arr << a
	arr << b
	return arr
}

fn main() {
	mut sc := Client{}
	sc.products_list()
	arr := [Value(0.5)]
	sc.pay_value(concat([Value(10.0)]))
	sc.pay_value(concat([Value(10.0)], arr))
}
